--- a/index.html
+++ b/index.html
@@ -11,30 +11,35 @@
 
 <body>
     <div class="container">
-        <input class="visor-calc" type="text">
-        <div class="calculadora">
-            <div class="numbers">
-                <button id="1" class="btn btn-number">7</button>
-                <button id="2" class="btn btn-number">8</button>
-                <button id="3" class="btn btn-number">9</button>
-                <button id="4" class="btn btn-number">4</button>
-                <button id="5" class="btn btn-number">5</button>
-                <button id="6" class="btn btn-number">6</button>
-                <button id="7" class="btn btn-number">1</button>
-                <button id="8" class="btn btn-number">2</button>
-                <button id="9" class="btn btn-number">3</button>
-                <button id="0" class="btn btn-number">0</button>
-                <button id="." class="btn btn-number">.</button>
-                <button id="=" class="btn-result">=</button>
+        <div class="container2">
+            <input class="visor-calc" type="text" disabled>
+            <div class="calculadora">
+                <div class="numbers">
+                    <button id="7" class="btn btn-number">7</button>
+                    <button id="8" class="btn btn-number">8</button>
+                    <button id="9" class="btn btn-number">9</button>
+                    <button id="4" class="btn btn-number">4</button>
+                    <button id="5" class="btn btn-number">5</button>
+                    <button id="6" class="btn btn-number">6</button>
+                    <button id="1" class="btn btn-number">1</button>
+                    <button id="2" class="btn btn-number">2</button>
+                    <button id="3" class="btn btn-number">3</button>
+                    <button id="0" class="btn btn-number">0</button>
+                    <button id="C" class="btn btn-delete">C</button>
+                    <button class="btn btn-delete-all">AC</button>
+                </div>
+                <div class="ope">
+                    <button id="/" class="btn btn-ope">/</button>
+                    <button id="*" class="btn btn-ope">*</button>
+                    <button id="-" class="btn btn-ope">-</button>
+                    <button id="+" class="btn btn-ope">+</button>
+                </div>
             </div>
-            <div class="ope">
-                <button class="btn btn-ope">/</button>
-                <button class="btn btn-ope">*</button>
-                <button class="btn btn-ope">-</button>
-                <button class="btn btn-ope">+</button>
-            </div>
+            <button id="=" class="btn btn-result">=</button>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
